// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel createConfig 1`] = `
Object {
  "context": "<PROJECT_ROOT>/app",
  "entry": Object {},
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.js\\$/i,
        "use": Object {
          "loader": "babel-loader",
          "options": Object {
            "cacheDirectory": true,
          },
        },
      },
    ],
  },
  "output": Object {
    "path": "<PROJECT_ROOT>/public/assets",
    "publicPath": "/assets/",
  },
  "plugins": Array [
    WebpackFixStyleOnlyEntriesPlugin {
      "apply": [Function],
      "options": Object {
        "extensions": Array [
          "less",
          "scss",
          "css",
          "sass",
          "styl",
        ],
        "ignore": undefined,
        "silent": false,
      },
    },
    Object {},
  ],
  "resolve": Object {
    "modules": Array [
      "<PROJECT_ROOT>/app",
    ],
  },
}
`;

exports[`babel disabled 1`] = `
Object {
  "context": "<PROJECT_ROOT>/app",
  "entry": Object {},
  "mode": "development",
  "output": Object {
    "path": "<PROJECT_ROOT>/public/assets",
    "publicPath": "/assets/",
  },
  "plugins": Array [
    WebpackFixStyleOnlyEntriesPlugin {
      "apply": [Function],
      "options": Object {
        "extensions": Array [
          "less",
          "scss",
          "css",
          "sass",
          "styl",
        ],
        "ignore": undefined,
        "silent": false,
      },
    },
    Object {},
  ],
  "resolve": Object {
    "modules": Array [
      "<PROJECT_ROOT>/app",
    ],
  },
}
`;

exports[`babel with options 1`] = `
Object {
  "context": "<PROJECT_ROOT>/app",
  "entry": Object {},
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.js\\$/i,
        "use": Object {
          "loader": "babel-loader",
          "options": Object {
            "cacheCompression": false,
            "cacheDirectory": true,
          },
        },
      },
    ],
  },
  "output": Object {
    "path": "<PROJECT_ROOT>/public/assets",
    "publicPath": "/assets/",
  },
  "plugins": Array [
    WebpackFixStyleOnlyEntriesPlugin {
      "apply": [Function],
      "options": Object {
        "extensions": Array [
          "less",
          "scss",
          "css",
          "sass",
          "styl",
        ],
        "ignore": undefined,
        "silent": false,
      },
    },
    Object {},
  ],
  "resolve": Object {
    "modules": Array [
      "<PROJECT_ROOT>/app",
    ],
  },
}
`;
